--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         </div>
         <hr>
         <p>
-            <b>$NIKO tokenomics:</b> 1.5%/1.5%</a>, Locked liquity, Renounced Ownership,  
+            <b>$BELLIC tokenomics:</b> 1.5%/1.5%</a>, Locked liquity, Renounced Ownership,  
           10% Marketing, 5% Team and 85% for the liquidty pool.
         </p>
   
@@ -176,7 +176,7 @@
         ">
         <img src="./Milady Maker_files/GTA-IV-Niko-sad-600x338.png">
         <p style="margin-top: 0.5em">
-          Please buy so <b>$NIKO</b> moons and starts a new revolution.
+          Please buy so <b>$BELLIC</b> moons and we start a new revolution.
         </p>
       </div>
     </div>
@@ -197,7 +197,7 @@
         Supply: 420,690,000,000
         <br>
         <br>
-        TOKEN ADDRESS: <br><b>0x70Ed380E375A05f764DcADcf87fd1B7744aa302B
+        TOKEN ADDRESS: <br><b>Soon
       </p>
     </div>
 
